@@ -191,11 +191,11 @@
 
 @misc{GoogleTerms,
 	Author = {Google Inc},
-	Date-Modified = {2010-10-17 09:05:59 +0100},
 	Keywords = {Terms of Use},
-	Title = {Google {V}isualization {A}{P}{I} {T}erms of {S}ervice},
-	Howpublished = {\url{http://code.google.com/apis/visualization/terms.html}},
-	Bdsk-Url-1 = {http://code.google.com/apis/visualization/terms.html}}
+	Title = {Google  {A}{P}{I} {T}erms of {S}ervice},
+        Year = {2012},
+	Howpublished = {\url{http://code.google.com/apis/terms/index.html}},
+	Bdsk-Url-1 = {http://code.google.com/apis/terms/index.html}}
 
 @misc{googleVis,
 	title = {google{V}is: Using the {G}oogle {V}isualisation {A}{P}{I} with {R}},
