@@ -7,9 +7,9 @@
   An organizational chart that supports selection.
   
   The gvisOrgChart function reads a data.frame and
-  creates text output referring to the Google Visualisation API which can be
+  creates text output referring to the Google Visualisation API, which can be
   included into a web page, or as a stand-alone page. The actual chart is
-  rendered by the web browser in flash.
+  rendered by the web browser.
   
 }
 \usage{
